Migrate dashboard queries from API to db requests
